--- a/public/views/code-sample.html
+++ b/public/views/code-sample.html
@@ -27,6 +27,13 @@
     <div class="col-sm-12 center" ng-show="(codeSampleCollection | filter:searchString).length==0">
         <p class="text-center">Sorry No Result Found</p>
     </div>
+    
+    <div class="col-sm-12 sample-wrapper clearfix">
+    	<tags-input ng-model="tags">
+	        <auto-complete source="loadTags($query)"></auto-complete>
+	    </tags-input>
+    </div>
+    
     <div class="col-sm-12 cs-toolbar clearfix">
         <div class="btn-group pull-right">
             <a class="btn btn-success btn-sm" ng-model="viewModeModel" btn-radio="'listView'" ng-click="setViewMode('listView')"><i class="glyphicon glyphicon-th-large"></i></a>
